Allow EphemeralFileSystemAbstraction to delete a non-existing file
Align behavior of EphemeralFileSystemAbstraction with other file systems and allow deletion of non-existing files. Before this PR it was not possible and an exception was thrown instead.